# Stream-Lineage

./: .gitignore  LICENSE  README.md  demo_surgical_replay.py  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
benchmarks/: bench_e2e.py  bench_envelope.py  bench_graph.py  bench_storage.py  harness.py  run_all.py
benchmarks/results/: benchmark_results.json
examples/apache-flink-kafka-example/: README.md  generate_test_data.py  lineage_enabled_pipeline.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedEdge.tsx  AuditPanel.tsx  DagView.tsx  DriftPanel.tsx  ImpactPanel.tsx  NodeDetailPanel.tsx  PipelineDiff.tsx  ProducerNode.tsx  SchemaDiff.tsx  Sidebar.tsx  TracePanel.tsx
frontend/src/hooks/: useDag.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/simulator/: SimulatorPage.tsx  engine.ts
frontend/src/types/: api.ts
infra/: redpanda-console-config.yaml
infra/grafana/dashboards/: streamlineage-overview.json
infra/prometheus/: prometheus.yml
sdk/: pyproject.toml
sdk/streamlineage/: __init__.py  envelope.py  interceptor.py  pyflink_wrapper.py  simple_envelope.py
services/api/: Dockerfile  config.py  dependencies.py  main.py  requirements.txt  scenario_orchestrator.py
services/api/routers/: audit.py  dag.py  diff.py  impact.py  producers.py  replay.py  schema.py  trace.py  verify.py
services/lineage-ingester/: Dockerfile  graph_builder.py  main.py  requirements.txt  schema_detector.py  storage.py
services/scenarios/complex_dag/: aggregator.py  enricher.py  fraud_check.py  orders_stream.py  output.py  risk_scorer.py  users_stream.py
services/scenarios/fan_in/: aggregator.py  source_a.py  source_b.py  source_c.py
services/scenarios/fan_out/: aggregate_processor.py  enrich_processor.py  producer.py  (+1 more)
services/sidecar/: Dockerfile  main.py
services/simulator/: Dockerfile  main.py
tests/: conftest.py
tests/integration/: test_lineage_pipeline.py
tests/unit/: test_envelope.py  test_graph_builder.py  test_interceptor.py  test_pyflink_wrapper.py  test_schema_detector.py  test_simple_envelope.py  test_storage.py  test_trace.py
(+10 files in other folders)
