[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlineage"
version = "0.1.0"
description = "Real-time data provenance and lineage tracking for Kafka pipelines"
authors = [{name = "Aditya M Hubli", email = "aditya.m.hubli@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["kafka", "lineage", "provenance", "data-engineering", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "confluent-kafka>=2.3.0",
]

[project.optional-dependencies]
flink = [
    "apache-flink>=1.18.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]
all = [
    "streamlineage[flink,dev]",
]

[project.urls]
Homepage = "https://github.com/aditya-hubli/streamlineage"
Documentation = "https://github.com/aditya-hubli/streamlineage/blob/main/README.md"
Repository = "https://github.com/aditya-hubli/streamlineage"
Issues = "https://github.com/aditya-hubli/streamlineage/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["streamlineage*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
